--- a/watch.css
+++ b/watch.css
@@ -1,16 +1,17 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
 .stopwatch-wrapper{
     padding: 20px;
-    background-color: black;
+    /* background-color: black; */
     text-align: center;
-    color: white;
+    /* color: white; */
 
 }
-.watch{
+.watchstop{
     padding: 30px;
     border: 1px solid salmon;
     border-radius: 10px;
