--- a/watch.css
+++ b/watch.css
@@ -13,7 +13,7 @@ body{
 }
 .watchstop{
     padding: 30px;
-    border: 1px solid salmon;
+    border: 1px solid black;
     border-radius: 10px;
     margin-bottom: 30px;
     font-size: 40px;
